adding submit endpoint, moving hbase and zookeeper to k8s